--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -23,7 +23,7 @@
           <a href="#"><i class="fa fa-gear fa-fw"></i> Configurações</a>
         </li>
         <li class="divider"></li>
-        <li><a href="/login"><i class="fa fa-sign-out fa-fw"></i> Sair</a>
+        <li><a (click)="signOut()"><i class=" fa fa-sign-out fa-fw"></i> Sair</a>
         </li>
       </ul>
     </li>
