--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -6,7 +6,7 @@
       </li>
 
       <!-- MEETINGS -->
-      <li *ngIf="shared.user.profile == 'ADM'">
+      <!-- <li *ngIf="shared.user.profile == 'ADM'"> -->
       <li>
         <a href="#"><i class="fa fa-group fa-fw"></i> Reuniões<span class="fa arrow"></span></a>
         <ul class="nav nav-second-level">
