--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,15 @@
-<!-- <app-header></app-header>
-<app-menubar [hidden]="!showTemplate"></app-menubar>
-<div id="wrapper">
-  <div id="page-wrapper">
-    <router-outlet></router-outlet>
-  </div>
-</div>
-<app-footer [hidden]="!showTemplate"></app-footer> -->
-
+<!-- [hidden]="!showTemplate" -->
 <app-header></app-header>
 
 <app-menubar></app-menubar>
 
-<div [ngClass]="showContentWrapper()">
+<!-- [ngClass]="showWrapper()" -->
+<div id="wrapper">
 
-  <div id="wrapper">
-
-    <div id="page-wrapper">
-      <router-outlet></router-outlet>
-    </div>
-
+  <div id="page-wrapper">
+    <router-outlet></router-outlet>
   </div>
+
 </div>
 
 <app-footer></app-footer>
