--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -11,14 +11,11 @@
           <a href="#"><i class="fa fa-calendar"></i> Agendamendos<span class="fa arrow"></span></a>
           <ul class="nav nav-second-level">
             <li>
-              <a class="nav-item nav-link" href="agendamento/listaIgreja"><i class="fa fa-list-alt fa-fw"></i> Listar Igrejas</a>
+              <a class="nav-item nav-link" href="agendamento/listaIgrejas"><i class="fa fa-list-alt fa-fw"></i> Listar Igrejas</a>
             </li>
             <li>
-              <a class="nav-item nav-link" href="agendamento/listaAgendamento"><i class="fa fa-list-alt fa-fw"></i> Listar Agendamentos</a>
+              <a class="nav-item nav-link" href="agendamento/listaAgendamentos"><i class="fa fa-list-alt fa-fw"></i> Listar Agendamentos</a>
             </li>
-            <!-- <li>
-              <a class="nav-item nav-link" href="locais/relatorio"><i class="fa fa-file-text-o fa-fw"></i> Relatório</a>
-            </li> -->
           </ul>
         </li>
 
@@ -28,7 +25,7 @@
         <a href="#"><i class="fa fa-group fa-fw"></i> Reuniões<span class="fa arrow"></span></a>
         <ul class="nav nav-second-level">
           <li>
-            <a class="nav-item nav-link" href="reuniao/lista"><i class="fa fa-list-alt fa-fw"></i> Listar Reuniões</a>
+            <a class="nav-item nav-link" href="reuniao/listarReunioes"><i class="fa fa-list-alt fa-fw"></i> Listar Reuniões</a>
           </li>
           <li>
             <a class="nav-item nav-link" href="reuniao/relatorio"><i class="fa fa-file-text-o fa-fw"></i>
@@ -43,13 +40,13 @@
         <a href="#"><i class="fa fa-map-marker"></i> Locais<span class="fa arrow"></span></a>
         <ul class="nav nav-second-level">
           <li>
-            <a class="nav-item nav-link" href="locais/lista"><i class="fa fa-list-alt fa-fw"></i> Listar</a>
+            <a class="nav-item nav-link" href="locais/lista"><i class="fa fa-list-alt fa-fw"></i> Regional</a>
           </li>
           <li>
-            <a class="nav-item nav-link" href="locais/novo"><i class="fa fa-edit fa-fw"></i> Cadastrar</a>
+            <a class="nav-item nav-link" href="locais/novo"><i class="fa fa-edit fa-fw"></i> Administração</a>
           </li>
           <li>
-            <a class="nav-item nav-link" href="locais/relatorio"><i class="fa fa-file-text-o fa-fw"></i> Relatório</a>
+            <a class="nav-item nav-link" href="locais/relatorio"><i class="fa fa-file-text-o fa-fw"></i> Igrejas</a>
           </li>
         </ul>
       </li>
