Correção do page-header

--- a/src/app/scheduled/schedule-list-meeting/schedule-list-meeting.component.html
+++ b/src/app/scheduled/schedule-list-meeting/schedule-list-meeting.component.html
@@ -25,9 +25,9 @@
           <td class="text-center">Vila Passos</td>
           <td class="text-center">Principal</td>
           <td class="text-center">
-            <p-toggleButton onLabel="Abrir" offLabel="cancelar" [style]="{'width':'150px'}"></p-toggleButton>
-            <!-- <button pButton type="button" label="Abrir" class="ui-button-info" (click)="openMeeting()"></button> -->
-            <!-- <button pButton type="button" label="Cancelar" class="ui-button-danger" (click)="closeMeeting()"></button> -->
+            <!-- <p-toggleButton onLabel="Abrir" offLabel="cancelar" [style]="{'width':'150px'}" ></p-toggleButton> -->
+            <button pButton type="button" label="Abrir" class="ui-button-info" (click)="openMeeting()"></button>
+            <button pButton type="button" label="Cancelar" class="ui-button-danger" (click)="closeMeeting()"></button>
           </td>
         </tr> 
     </tbody>
