--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,14 @@
 <!-- [hidden]="!showTemplate" -->
-<app-header></app-header>
+<app-header [hidden]="!showTemplate"></app-header>
 
-<app-menubar></app-menubar>
+<app-menubar [hidden]="!showTemplate"></app-menubar>
 
-<!-- [ngClass]="showWrapper()" -->
-<div id="wrapper">
+<div class="wrapper">
 
-  <div id="page-wrapper">
+  <div [ngClass]="showWrapper()">
     <router-outlet></router-outlet>
   </div>
 
 </div>
 
-<app-footer></app-footer>
+<app-footer [hidden]="!showTemplate"></app-footer>
