--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-inverse navbar-fixed-top bg-primary" role="navigation">
   <div class="navbar-header">
-    <a class="navbar-brand" href="#">CCB - Congregação Cristã no Brasil</a>
+    <!-- <a class="navbar-brand" href="#">CCB - Congregação Cristã no Brasil</a> -->
   </div>
 
   <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -23,7 +23,7 @@
           <a href="#"><i class="fa fa-gear fa-fw"></i> Configurações</a>
         </li>
         <li class="divider"></li>
-        <li><a (click)="signOut()"><i class=" fa fa-sign-out fa-fw"></i> Sair</a>
+        <li><a (click)="logout()"><i class=" fa fa-sign-out fa-fw"></i> Sair</a>
         </li>
       </ul>
     </li>
