--- a/src/app/components/security/login/login.component.html
+++ b/src/app/components/security/login/login.component.html
@@ -1,27 +1,19 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4 col-md-offset-4">
-
       <br /><br />
+      <!-- <img src="../../../../assets/img/logotipo-ccb.png" class="logotipo" /> -->
+      <br />
+      <hr>
+      <h4 class="text-center">Fazer login</h4>
 
-      <form class="form-horizontal" #form="ngForm" (ngSubmit)="login()" novalidate>
-        <img src="../../../../assets/img/logotipo-ccb.png" class="logotipo" />
-        <br />
-        <hr>
-        <h4 class="text-center">Fazer login</h4>
-
-        <div class="form-group">
-          <input type="email" class="form-control" [(ngModel)]="user.email" placeholder="E-mail" id="inputEmail" #email="ngModel"
-            name="email" email>
-          <!-- <span class="help-block" *ngIf="email.invalid && email.dirty">Nome inválido</span> -->
-        </div>
-        <div class="form-group">
-          <input type="password" [(ngModel)]="user.password" class="form-control" placeholder="Password" id="inputPassword"
-            #password="ngModel" name="password" password>
-          <!-- <span class="help-block" *ngIf="password.invalid && password.dirty">Senha é requerida</span> -->
-        </div>
-        <button pButton type="submit" label="Entrar"></button>
-      </form>
+      <div class="form-group">
+        <input [(ngModel)]="user.name" id="user" type="text" class="validate form-control">
+      </div>
+      <div class="form-group">
+        <input [(ngModel)]="user.password" id="password" type="password" class="validate form-control">
+      </div>
+      <button pButton type="submit" label="Entrar" (click)="login()"></button>
 
     </div>
   </div>
