Corrigindo rotas dos menus

--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -13,13 +13,13 @@
             class="fa arrow"></span></a>
         <ul class="nav nav-second-level">
           <li>
-            <a class="nav-item nav-link" href="agendamento/listaIgrejas">
+            <a class="nav-item nav-link" routerLink="agendamento/listaIgrejas" routerLinkActive="active">
               <i class="fa fa-list" aria-hidden="true"></i> Listar
               Igrejas</a>
           </li>
           <li>
-            <a class="nav-item nav-link" href="agendamento/listaAgendamentos"><i class="fa fa-list-alt"
-                aria-hidden="true"></i>
+            <a class="nav-item nav-link" routerLink="agendamento/listaAgendamentos" routerLinkActive="active"><i
+                class="fa fa-list-alt" aria-hidden="true"></i>
               Listar Agendamentos</a>
           </li>
         </ul>
@@ -32,11 +32,13 @@
         <a href="#"><i class="fa fa-group fa-fw"></i> Reuniões<span class="fa arrow"></span></a>
         <ul class="nav nav-second-level">
           <li>
-            <a class="nav-item nav-link" href="reuniao/listarReunioes"><i class="fa fa-list" aria-hidden="true"></i>
+            <a class="nav-item nav-link" routerLink="reuniao/listarReunioes" routerLinkActive="active"><i
+                class="fa fa-list" aria-hidden="true"></i>
               Listar Reuniões</a>
           </li>
           <li>
-            <a class="nav-item nav-link" href="reuniao/relatorio"><i class="fa fa-bar-chart" aria-hidden="true"></i>
+            <a class="nav-item nav-link" routerLink="reuniao/relatorio" routerLinkActive="active"><i
+                class="fa fa-bar-chart" aria-hidden="true"></i>
               Relatório</a>
           </li>
         </ul>
@@ -52,11 +54,13 @@
                 class="fa arrow"></span></a>
             <ul class="nav nav-third-level">
               <li>
-                <a class="nav-item nav-link" href="#"><i class="fa fa-plus" aria-hidden="true"></i> Cadastrar
+                <a class="nav-item nav-link" routerLink="regionais/cadastrarRegional" routerLinkActive="active"><i
+                    class="fa fa-plus" aria-hidden="true"></i> Cadastrar
                   Regional</a>
               </li>
               <li>
-                <a class="nav-item nav-link" href="#"><i class="fa fa-list" aria-hidden="true"></i>
+                <a class="nav-item nav-link" routerLink="regionais/listarRegionais" routerLinkActive="active"><i
+                    class="fa fa-list" aria-hidden="true"></i>
                   Listar Regionais</a>
               </li>
             </ul>
@@ -66,11 +70,13 @@
                 class="fa arrow"></span></a>
             <ul class="nav nav-third-level">
               <li>
-                <a class="nav-item nav-link" href="#"><i class="fa fa-plus" aria-hidden="true"></i>
+                <a class="nav-item nav-link" routerLink="administracao/cadastrarAdministracao"
+                  routerLinkActive="active"><i class="fa fa-plus" aria-hidden="true"></i>
                   Cadastrar Administração</a>
               </li>
               <li>
-                <a class="nav-item nav-link" href="#"><i class="fa fa-list" aria-hidden="true"></i>
+                <a class="nav-item nav-link" routerLink="administracao/ListarAdministroes" routerLinkActive="active"><i
+                    class="fa fa-list" aria-hidden="true"></i>
                   Listar Administrações</a>
               </li>
             </ul>
@@ -79,11 +85,13 @@
             <a href="#"><i class="fa fa-home fa-fw" aria-hidden="true"></i> Igrejas<span class="fa arrow"></span></a>
             <ul class="nav nav-third-level">
               <li>
-                <a class="nav-item nav-link" href="#"><i class="fa fa-plus" aria-hidden="true"></i>
+                <a class="nav-item nav-link" routerLink="igrejas/cadastrarIgreja" routerLinkActive="active"><i
+                    class="fa fa-plus" aria-hidden="true"></i>
                   Cadastrar Igreja</a>
               </li>
               <li>
-                <a class="nav-item nav-link" href="#"><i class="fa fa-list" aria-hidden="true"></i>
+                <a class="nav-item nav-link" routerLink="igrejas/ListarIgrejas" routerLinkActive="active"><i
+                    class="fa fa-list" aria-hidden="true"></i>
                   Listar Igrejas</a>
               </li>
             </ul>
@@ -92,86 +100,19 @@
             <a href="#"><i class="fa fa-hotel fa-fw" aria-hidden="true"></i> Salões<span class="fa arrow"></span></a>
             <ul class="nav nav-third-level">
               <li>
-                <a class="nav-item nav-link" href="#"><i class="fa fa-plus" aria-hidden="true"></i>
+                <a class="nav-item nav-link" routerLink="saloes/cadastrarSalao" routerLinkActive="active"><i
+                    class="fa fa-plus" aria-hidden="true"></i>
                   Cadastrar Salão</a>
               </li>
               <li>
-                <a class="nav-item nav-link" href="#"><i class="fa fa-list" aria-hidden="true"></i>
+                <a class="nav-item nav-link" routerLink="saloes/ListarSaloes" routerLinkActive="active"><i
+                    class="fa fa-list" aria-hidden="true"></i>
                   Listar Salões</a>
               </li>
             </ul>
           </li>
         </ul>
       </li>
-
-      <!-- <li>
-          <a href="#"><i class="fa fa-table fa-fw"></i> Tables</a>
-        </li>
-        <li>
-          <a href="#"><i class="fa fa-edit fa-fw"></i> Forms</a>
-        </li> -->
-      <!-- <li>
-          <a href="#"><i class="fa fa-wrench fa-fw"></i> UI Elements<span class="fa arrow"></span></a>
-          <ul class="nav nav-second-level">
-            <li>
-              <a href="panels-wells.html">Panels and Wells</a>
-            </li>
-            <li>
-              <a href="buttons.html">Buttons</a>
-            </li>
-            <li>
-              <a href="notifications.html">Notifications</a>
-            </li>
-            <li>
-              <a href="typography.html">Typography</a>
-            </li>
-            <li>
-              <a href="icons.html"> Icons</a>
-            </li>
-            <li>
-              <a href="grid.html">Grid</a>
-            </li>
-          </ul>
-        </li> -->
-      <!-- <li>
-          <a href="#"><i class="fa fa-sitemap fa-fw"></i> Multi-Level Dropdown<span class="fa arrow"></span></a>
-          <ul class="nav nav-second-level">
-            <li>
-              <a href="#">Second Level Item</a>
-            </li>
-            <li>
-              <a href="#">Second Level Item</a>
-            </li>
-            <li>
-              <a href="#">Third Level <span class="fa arrow"></span></a>
-              <ul class="nav nav-third-level">
-                <li>
-                  <a href="#">Third Level Item</a>
-                </li>
-                <li>
-                  <a href="#">Third Level Item</a>
-                </li>
-                <li>
-                  <a href="#">Third Level Item</a>
-                </li>
-                <li>
-                  <a href="#">Third Level Item</a>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </li> -->
-      <!-- <li>
-          <a href="#"><i class="fa fa-files-o fa-fw"></i> Sample Pages<span class="fa arrow"></span></a>
-          <ul class="nav nav-second-level">
-            <li>
-              <a href="blank.html">Blank Page</a>
-            </li>
-            <li>
-              <a href="login.html">Login Page</a>
-            </li>
-          </ul>
-        </li> -->
     </ul>
   </div>
 </div>
