--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,18 @@
 <!-- [hidden]="!showTemplate" -->
-<app-header></app-header>
+<app-header [hidden]="!showTemplate"></app-header>
 
-<app-menubar></app-menubar>
+<app-menubar [hidden]="!showTemplate"></app-menubar>
 
 <div id="wrapper">
 
   <div id="page-wrapper">
+    
+  </div>
+  
+  <div class="container">
     <router-outlet></router-outlet>
   </div>
 
 </div>
 
-<app-footer></app-footer>
+<app-footer [hidden]="!showTemplate"></app-footer>
