Correção html e componentes

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,9 +3,9 @@
     <div class="pull-right hidden-xs">
       <b>Version</b> 1.0
     </div>
-    <strong>Copyright &copy; 2020 <a href="https://congregacaocristanobrasil.org.br"
+    <!-- <strong>Copyright &copy; 2020 <a href="https://congregacaocristanobrasil.org.br"
         style="color: white; padding: 15px;">
-        Congregação Cristã no Brasil</a>.</strong> All rights
+        Congregação Cristã no Brasil</a>.</strong> --> All rights
     reserved.
   </div>
 </footer>
