--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,93 +1,97 @@
-<br /><br /><br />
+<div class="container">
 
-<div class="row">
-  <div class="col-lg-3 col-md-6">
-    <div class="panel panel-primary">
-      <div class="panel-heading">
-        <div class="row">
-          <div class="col-xs-3">
-            <i class="fa fa-comments fa-5x"></i>
-          </div>
-          <div class="col-xs-9 text-right">
-            <div class="huge">2</div>
-            <div>Reuniões Agendadas</div>
-          </div>
-        </div>
-      </div>
-      <a href="reuniao/lista">
-        <div class="panel-footer">
-          <span class="pull-left">Visualizar</span>
-          <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+  <br /><br /><br />
 
-          <div class="clearfix"></div>
-        </div>
-      </a>
-    </div>
-  </div>
-  <div class="col-lg-3 col-md-6">
-    <div class="panel panel-primary">
-      <div class="panel-heading">
-        <div class="row">
-          <div class="col-xs-3">
-            <i class="fa fa-tasks fa-5x"></i>
-          </div>
-          <div class="col-xs-9 text-right">
-            <div class="huge">12</div>
-            <div>Administrações</div>
+  <div class="row">
+    <div class="col-lg-3 col-md-6">
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col-xs-3">
+              <i class="fa fa-comments fa-5x"></i>
+            </div>
+            <div class="col-xs-9 text-right">
+              <div class="huge">2</div>
+              <div>Reuniões Agendadas</div>
+            </div>
           </div>
         </div>
-      </div>
-      <a href="#">
-        <div class="panel-footer">
-          <span class="pull-left">Visualizar</span>
-          <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-          <div class="clearfix"></div>
-        </div>
-      </a>
-    </div>
-  </div>
-  <div class="col-lg-3 col-md-6">
-    <div class="panel panel-primary">
-      <div class="panel-heading">
-        <div class="row">
-          <div class="col-xs-3">
-            <i class="fa fa-address-card fa-5x"></i>
-          </div>
-          <div class="col-xs-9 text-right">
-            <div class="huge">1200</div>
-            <div>Colaboradores</div>
-          </div>
-        </div>
-      </div>
-      <a href="#">
-        <div class="panel-footer">
-          <span class="pull-left">Visualizar</span>
-          <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+        <a routerLink="reuniao/lista">
+          <div class="panel-footer">
+            <span class="pull-left">Visualizar</span>
+            <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
 
-          <div class="clearfix"></div>
-        </div>
-      </a>
-    </div>
-  </div>
-  <div class="col-lg-3 col-md-6">
-    <div class="panel panel-primary">
-      <div class="panel-heading">
-        <div class="row">
-          <div class="col-xs-3">
-            <i class="fa fa-address-book fa-5x"></i>
+            <div class="clearfix"></div>
           </div>
-          <div class="col-xs-9 text-right">
-            <div class="huge">13</div>
-            <div>Irmãos Autenticados</div>
-          </div>
-        </div>
+        </a>
       </div>
-      <a href="#">
-        <div class="panel-footer">
-          <span class="pull-left">Visualizar</span>
-          <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-          <div class="clearfix"></div>
-        </div>
-      </a>
     </div>
+    <div class="col-lg-3 col-md-6">
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col-xs-3">
+              <i class="fa fa-tasks fa-5x"></i>
+            </div>
+            <div class="col-xs-9 text-right">
+              <div class="huge">12</div>
+              <div>Administrações</div>
+            </div>
+          </div>
+        </div>
+        <a href="#">
+          <div class="panel-footer">
+            <span class="pull-left">Visualizar</span>
+            <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+            <div class="clearfix"></div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-6">
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col-xs-3">
+              <i class="fa fa-address-card fa-5x"></i>
+            </div>
+            <div class="col-xs-9 text-right">
+              <div class="huge">1200</div>
+              <div>Colaboradores</div>
+            </div>
+          </div>
+        </div>
+        <a href="#">
+          <div class="panel-footer">
+            <span class="pull-left">Visualizar</span>
+            <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+
+            <div class="clearfix"></div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-6">
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col-xs-3">
+              <i class="fa fa-address-book fa-5x"></i>
+            </div>
+            <div class="col-xs-9 text-right">
+              <div class="huge">13</div>
+              <div>Irmãos Autenticados</div>
+            </div>
+          </div>
+        </div>
+        <a href="#">
+          <div class="panel-footer">
+            <span class="pull-left">Visualizar</span>
+            <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+            <div class="clearfix"></div>
+          </div>
+        </a>
+      </div>
+    </div>
+
   </div>
