--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-inverse navbar-fixed-top bg-primary" role="navigation">
-  <div class="navbar-header" *ngIf="!authService.loggedIn()">
+  <div class="navbar-header">
     <!-- <a class="navbar-brand" href="#">CCB - Congregação Cristã no Brasil</a> -->
   </div>
 
