--- a/src/app/locals/locals-administration/locals-administration-add/locals-administration-add.component.html
+++ b/src/app/locals/locals-administration/locals-administration-add/locals-administration-add.component.html
@@ -1,3 +1,44 @@
-<br>
+<div class="container-fluid">
 
-<p>locals-administration-add works!</p>
+  <br /><br /><br />
+
+  <h1>Cadastrar Administração</h1>
+
+  <hr />
+
+  <form action="" method="POST">
+    <p-fieldset legend="Dados da Administração">
+      <div class="ui-g">
+        <div class="form-group ui-g-2">
+          <label for="name">ID: </label>
+          <input type="text" pInputText class="form-control" id="disabled-input" name="id" [disabled]="disabled" />
+        </div>
+      </div>
+      <div class="ui-g ui-fluid">
+        <div class="form-group ui-g-12">
+          <label for="name">Nome: </label>
+          <input type="text" pInputText class="form-control" id="name" name="name" />
+        </div>
+        <div class="form-group ui-g-6">
+          <label for="cnpj">CNPJ: </label>
+          <input type="text" pInputText class="form-control" id="cnpj" name="cnpj" />
+        </div>
+        <!-- <div class="form-group ui-g-12">
+          <label for="grupos">Igrejas: </label>
+          <p-dropdown [options]="grupos" optionLabel="name" [showClear]="true"></p-dropdown>
+        </div> -->
+      </div>
+    </p-fieldset>
+
+    <br />
+
+    <div class="ui-g ui-fluid">
+      <div class="ui-g-12 ui-md-1 ui-md-offset-11">
+        <button pButton type="submit" label="Salvar" (click)="handleClick($event)"></button>
+      </div>
+    </div>
+  </form>
+
+  <br /><br /><br />
+
+</div>
