--- a/src/app/locals/locals-churches/locals-churches-add/locals-churches-add.component.html
+++ b/src/app/locals/locals-churches/locals-churches-add/locals-churches-add.component.html
@@ -1,3 +1,44 @@
-<br>
+<div class="container-fluid">
 
-<p>locals-churches-add works!</p>
+  <br /><br /><br />
+
+  <h1>Cadastrar Igreja</h1>
+
+  <hr />
+
+  <form action="" method="POST">
+    <p-fieldset legend="Dados da Igreja">
+      <div class="ui-g">
+        <div class="form-group ui-g-1">
+          <label for="id">ID: </label>
+          <input type="text" pInputText class="form-control" id="disabled-input" name="id" [disabled]="disabled" />
+        </div>
+      </div>
+      <div class="ui-g ui-fluid">
+        <div class="form-group ui-g-3">
+          <label for="code">Code Relatório: </label>
+          <input type="text" pInputText class="form-control" id="code" name="code" />
+        </div>
+        <div class="form-group ui-g-9">
+          <label for="name">Name: </label>
+          <input type="text" pInputText class="form-control" id="name" name="name" />
+        </div>
+        <div class="form-group ui-g-9">
+          <label for="description">Descrição: </label>
+          <input type="text" pInputText class="form-control" id="description" name="description" />
+        </div>
+      </div>
+    </p-fieldset>
+
+    <br />
+
+    <div class="ui-g ui-fluid">
+      <div class="ui-g-12 ui-md-1 ui-md-offset-11">
+        <button pButton type="submit" label="Salvar" (click)="handleClick($event)"></button>
+      </div>
+    </div>
+  </form>
+
+  <br /><br /><br />
+
+</div>
