--- a/src/app/locals/locals-regionals/locals-regionals-add/locals-regionals-add.component.html
+++ b/src/app/locals/locals-regionals/locals-regionals-add/locals-regionals-add.component.html
@@ -2,6 +2,39 @@
 
   <br /><br /><br />
 
+  <h1>Cadastrar Regional</h1>
 
+  <hr />
+
+  <form action="" method="POST">
+    <p-fieldset legend="Dados da Regional">
+      <div class="ui-g">
+        <div class="form-group ui-g-2">
+          <label for="id">ID: </label>
+          <input type="text" pInputText class="form-control" id="id" name="id" [disabled]="disabled" />
+        </div>
+      </div>
+      <div class="ui-g ui-fluid">
+        <div class="form-group ui-g-12">
+          <label for="name">Nome: </label>
+          <input type="text" pInputText class="form-control" id="name" name="name" />
+        </div>
+        <div class="form-group ui-g-12">
+          <label for="description">Descrição: </label>
+          <input type="text" pInputText class="form-control" id="description" name="description" />
+        </div>
+      </div>
+    </p-fieldset>
+
+    <br />
+
+    <div class="ui-g ui-fluid">
+      <div class="ui-g-12 ui-md-1 ui-md-offset-11">
+        <button pButton type="submit" label="Salvar" (click)="handleClick($event)"></button>
+      </div>
+    </div>
+  </form>
+
+  <br /><br /><br />
 
 </div>
