--- a/src/app/locals/locals-regionals/locals-regionals-list/locals-regionals-list.component.html
+++ b/src/app/locals/locals-regionals/locals-regionals-list/locals-regionals-list.component.html
@@ -1,3 +1,33 @@
-<br>
+<div class="container-fluid">
 
-<p>locals-regionals-list works!</p>
+  <br /><br /><br />
+
+  <h1>Regionais</h1>
+
+  <hr />
+
+  <br />
+
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th class="text-center">Código</th>
+        <th class="text-center">Nome</th>
+        <th class="text-center">Descrição</th>
+        <th class="text-center">Ações</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td class="text-center">REG-001</td>
+        <td class="text-center">RAVAP</td>
+        <td class="text-center">Regional Adminsitrativa do Vale do Paraíba</td>
+        <td class="text-center">
+          <button pButton type="button" label="Editar" class="ui-button-success"></button>
+          <button pButton type="button" label="Excluir" class="ui-button-info" (click)="accessMeeting()"></button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+</div>
