--- a/src/app/meeting/meetings-add/meetings-add.component.html
+++ b/src/app/meeting/meetings-add/meetings-add.component.html
@@ -1,69 +1,73 @@
-<br /><br /><br />
+<div class="container-fluid">
 
-<h1>Agendar Reuniões</h1>
+  <br /><br /><br />
 
-<hr />
+  <h1>Agendar Reuniões</h1>
 
-<form action="" method="POST">
+  <hr />
 
-  <p-fieldset legend="Dados da Igreja">
-    <div class="ui-g ui-fluid">
+  <form action="" method="POST">
+
+    <p-fieldset legend="Dados da Igreja">
+      <div class="ui-g ui-fluid">
+        <div class="form-group ui-g-6">
+          <label for="igreja">Igreja: </label>
+          <input type="text" pInputText class="form-control" id="igreja" />
+        </div>
+        <div class="form-group ui-g-6">
+          <label for="salao">Salão: </label>
+          <p-dropdown [options]="saloes" optionLabel="name" [showClear]="true"></p-dropdown>
+        </div>
+        <div class="form-group ui-g-12">
+          <label for="grupos">Grupos: </label>
+          <p-dropdown [options]="grupos" optionLabel="name" [showClear]="true"></p-dropdown>
+        </div>
+      </div>
+    </p-fieldset>
+
+    <p-fieldset legend="Data e hora da reunião">
       <div class="form-group ui-g-6">
-        <label for="igreja">Igreja: </label>
-        <input type="text" pInputText class="form-control" id="igreja" />
+        <label for="dtInicio">Data Inicial: </label><br />
+        <p-calendar [showIcon]="true" id="dtInicio"></p-calendar>
       </div>
       <div class="form-group ui-g-6">
-        <label for="salao">Salão: </label>
-        <p-dropdown [options]="saloes" optionLabel="name" [showClear]="true"></p-dropdown>
+        <label for="hrInicial">Hora inicial: </label><br />
+        <div class="ui-inputgroup">
+          <p-calendar [timeOnly]="true" id="hrInicial" [showIcon]="true"></p-calendar>
+        </div>
       </div>
-      <div class="form-group ui-g-12">
-        <label for="grupos">Grupos: </label>
-        <p-dropdown [options]="grupos" optionLabel="name" [showClear]="true"></p-dropdown>
-      </div>
-    </div>
-  </p-fieldset>
 
-  <p-fieldset legend="Data e hora da reunião">
-    <div class="form-group ui-g-6">
-      <label for="dtInicio">Data Inicial: </label><br />
-      <p-calendar [showIcon]="true" id="dtInicio"></p-calendar>
-    </div>
-    <div class="form-group ui-g-6">
-      <label for="hrInicial">Hora inicial: </label><br />
-      <div class="ui-inputgroup">
-        <p-calendar [timeOnly]="true" id="hrInicial" [showIcon]="true"></p-calendar>
+      <div class="form-group ui-g-6">
+        <label for="dtTerminio">Data Términio: </label><br />
+        <p-calendar [showIcon]="true" id="dtTerminio"></p-calendar>
       </div>
-    </div>
-
-    <div class="form-group ui-g-6">
-      <label for="dtTerminio">Data Términio: </label><br />
-      <p-calendar [showIcon]="true" id="dtTerminio"></p-calendar>
-    </div>
-    <div class="form-group ui-g-6">
-      <label for="hrTerminio">Hora Términio: </label><br />
-      <div class="ui-inputgroup">
-        <p-calendar [timeOnly]="true" id="hrTerminio" [showIcon]="true"></p-calendar>
+      <div class="form-group ui-g-6">
+        <label for="hrTerminio">Hora Términio: </label><br />
+        <div class="ui-inputgroup">
+          <p-calendar [timeOnly]="true" id="hrTerminio" [showIcon]="true"></p-calendar>
+        </div>
       </div>
-    </div>
-  </p-fieldset>
+    </p-fieldset>
 
-  <p-fieldset legend="Administração">
+    <p-fieldset legend="Administração">
+      <div class="ui-g ui-fluid">
+        <div class="ui-g-12">
+          <label for="administracao">Administração: </label>
+          <p-autoComplete [suggestions]="filteredAdministration" (completeMethod)="filterAdministration($event)"
+            field="name" [size]="30" [minLength]="1" id="administracao"></p-autoComplete>
+        </div>
+      </div>
+    </p-fieldset>
+
+    <br />
+
     <div class="ui-g ui-fluid">
-      <div class="ui-g-12">
-        <label for="administracao">Administração: </label>
-        <p-autoComplete [suggestions]="filteredAdministration" (completeMethod)="filterAdministration($event)"
-          field="name" [size]="30" [minLength]="1" id="administracao"></p-autoComplete>
+      <div class="ui-g-12 ui-md-1 ui-md-offset-11">
+        <button pButton type="submit" label="Salvar" (click)="handleClick($event)"></button>
       </div>
     </div>
-  </p-fieldset>
+  </form>
 
-  <br />
+  <br /><br /><br />
 
-  <div class="ui-g ui-fluid">
-    <div class="ui-g-12 ui-md-1 ui-md-offset-11">
-      <button pButton type="submit" label="Salvar" (click)="handleClick($event)"></button>
-    </div>
-  </div>
-</form>
-
-<br /><br /><br />
+</div>
