--- a/src/app/schedule/schedule-list-meeting/schedule-list-meeting.component.html
+++ b/src/app/schedule/schedule-list-meeting/schedule-list-meeting.component.html
@@ -1,33 +1,38 @@
-<br /><br /><br />
+<div class="container-fluid">
 
-<h1>Reuniões Agendadas</h1>
+  <br /><br /><br />
 
-<hr />
+  <h1>Reuniões Agendadas</h1>
 
-<br />
+  <hr />
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th class="text-center">Código</th>
-      <th class="text-center">Data Inicial</th>
-      <th class="text-center">Data Final</th>
-      <th class="text-center">Igreja</th>
-      <th class="text-center">Salão</th>
-      <th class="text-center">Ações</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td class="text-center">Reunião - 001</td>
-      <td class="text-center">08/02/2020</td>
-      <td class="text-center">08/02/2020</td>
-      <td class="text-center">Vila Passos</td>
-      <td class="text-center">Principal</td>
-      <td class="text-center">
-        <button pButton type="button" label="Abrir" class="ui-button-info" (click)="openMeeting($event)"></button>
-        <button pButton type="button" label="Cancelar" class="ui-button-danger" (click)="closeMeeting($event)"></button>
-      </td>
-    </tr>
-  </tbody>
-</table>
+  <br />
+
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th class="text-center">Código</th>
+        <th class="text-center">Data Inicial</th>
+        <th class="text-center">Data Final</th>
+        <th class="text-center">Igreja</th>
+        <th class="text-center">Salão</th>
+        <th class="text-center">Ações</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td class="text-center">Reunião - 001</td>
+        <td class="text-center">08/02/2020</td>
+        <td class="text-center">08/02/2020</td>
+        <td class="text-center">Vila Passos</td>
+        <td class="text-center">Principal</td>
+        <td class="text-center">
+          <button pButton type="button" label="Abrir" class="ui-button-info" (click)="openMeeting($event)"></button>
+          <button pButton type="button" label="Cancelar" class="ui-button-danger"
+            (click)="closeMeeting($event)"></button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+</div>
